--- a/package.json
+++ b/package.json
@@ -5,11 +5,35 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p $PORT",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@googlemaps/google-maps-services-js": "^3.1.16",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/styles": "^4.11.3",
+    "date-fns": "^2.20.2",
+    "fontsource-roboto": "^4.0.0",
+    "formik": "^2.2.6",
+    "haversine-distance": "^1.2.1",
+    "lodash": "^4.17.21",
+    "mongodb": "^3.6.5",
+    "mongoose": "^5.12.2",
     "next": "10.1.1",
+    "next-auth": "^3.13.3",
+    "next-pwa": "^5.0.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.13.5",
+    "recharts": "^2.0.9",
+    "yup": "^0.32.9"
+  },
+  "peerOptionalDependencies": {
+    "mongodb": "^3.6.5",
+    "mongoose": "^5.12.2"
   }
 }
