--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT",
-    "heroku-postbuild": "npm run build"
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -35,5 +34,6 @@
   "peerOptionalDependencies": {
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.2"
-  }
+  },
+  "cacheDirectories" : [".next/cache"]
 }
