--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
     "@material-ui/styles": "^4.11.3",
     "date-fns": "^2.20.2",
     "fontsource-roboto": "^4.0.0",
-    "formik": "^2.2.6",
+    "formik": "^2.2.9",
     "haversine": "^1.1.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.2",
-    "next": "10.1.1",
-    "next-auth": "^3.13.3",
+    "next": "^11.1.0",
+    "next-auth": "^3.29.0",
     "next-pwa": "^5.0.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-query": "^3.13.5",
     "recharts": "^2.0.9",
+    "swr": "^1.0.0",
     "yup": "^0.32.9"
   },
   "peerOptionalDependencies": {
