--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
   "peerOptionalDependencies": {
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.2"
+  },
+  "devDependencies": {
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2"
   }
 }
