--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/styles": "^5.2.3",
     "@next-auth/mongodb-adapter": "^1.0.1",
     "@reduxjs/toolkit": "^1.7.1",
+    "haversine": "^1.1.1",
     "lodash": "^4.17.21",
     "mongodb": "^4.2.2",
+    "mongoose": "^6.1.3",
     "next": "12.0.7",
     "next-auth": "^4.0.5",
     "next-pwa": "^5.4.4",
