--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
@@ -12,12 +12,16 @@
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
+    "@googlemaps/google-maps-services-js": "^3.3.4",
+    "@hookform/resolvers": "^2.8.5",
+    "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.5",
     "@mui/styles": "^5.2.3",
     "@next-auth/mongodb-adapter": "^1.0.1",
     "@reduxjs/toolkit": "^1.7.1",
     "haversine": "^1.1.1",
     "lodash": "^4.17.21",
+    "luxon": "^2.2.0",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
     "next": "12.0.7",
@@ -25,8 +29,10 @@
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.22.5",
     "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.5.0",
