--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "mytravels",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
+  "cacheDirectories": [
+    ".next/cache"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -24,11 +30,11 @@
     "luxon": "^2.2.0",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
-    "next": "12.0.7",
+    "next": "^12.0.7",
     "next-auth": "^4.0.5",
     "next-pwa": "^5.4.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
