--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hook-form": "^7.22.5",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "recharts": "^2.1.8",
     "yup": "^0.32.11"
   },
   "devDependencies": {
